namespaces/live.cloud-platform.service.justice.gov.uk/dso-monitoring-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dso-monitoring-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "dso_internal"
    cloud-platform.justice.gov.uk/application: "DSO Monitoring"
    cloud-platform.justice.gov.uk/owner: "Digital Studio Operations: digital-studio-operations-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/dso-monitoring"
    cloud-platform.justice.gov.uk/team-name: "studio-webops"
